WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283284
[GTK][WPE][Skia] WebKitTestRunners asserts under SKIA_DEBUG builds
https://bugs.webkit.org/show_bug.cgi?id=283284
Summary
[GTK][WPE][Skia] WebKitTestRunners asserts under SKIA_DEBUG builds
Nikolas Zimmermann
Reported
2024-11-18 00:24:53 PST
WebKitTestRunner fires an assertion under SKIA_DEBUG builds. Don't attempt to access SkPixmap::addr8(), use addr32() as we deal with RGBA8 buffers, that span 32 bits, not 8 bits.
Attachments
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2024-11-18 00:38:55 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36788
EWS
Comment 2
2024-11-18 02:06:30 PST
Committed
286716@main
(88d4dbb4efd0): <
https://commits.webkit.org/286716@main
> Reviewed commits have been landed. Closing PR #36788 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug