[GTK][WPE][Skia] WebKitTestRunners asserts under SKIA_DEBUG builds https://bugs.webkit.org/show_bug.cgi?id=283284

Reviewed by Carlos Garcia Campos.

WebKitTestRunner fires an assertion under SKIA_DEBUG builds.
Don't attempt to access SkPixmap::addr8(), use addr32() as
we deal with RGBA8 buffers, that span 32 bits, not 8 bits.

Covered by existing tests.

* Tools/WebKitTestRunner/skia/TestInvocationSkia.cpp:
(WTR::computeSHA1HashStringForPixmap):

Canonical link: https://commits.webkit.org/286716@main